# research-skills

./: .gitignore  README.md  pyproject.toml
notebooks/: 001 - eda.ipynb  002 - base model.ipynb  003 - catboost go brrr.ipynb  004 - check correlation between not-na and all-0 labels.ipynb  005 - dealing with imbalance.ipynb  006 - try to use more columns.ipynb
src/: config.py  preprocess.py  train.py
