[project]
name = "ds_problem"
version = "0.1.0"
authors = [{ name = "Nikita Barsukov", email = "n.v.barsukov@tinkoff.ru" }]
description = "Some DS problem"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy==1.23.5",
    "pandas==1.5.2",
    "rich==12.6.0",
    "typer==0.7.0",
    "jupyter==1.0.0",
    "pandas-stubs>=1.5",
    "scikit-learn==1.2.0",
    "plotly==5.11.0",
    "matplotlib==3.6.2",
    "seaborn==0.12.1",
    "catboost==1.1.1",
]

[tool.setuptools]
packages = ["src"]

[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
